feat: change  address to thailand format and check update default
