# server/controller/address.go
@@ -55,12 +55,12 @@ func (a *addressController) GetByUserID(ctx *fiber.Ctx) error {
 // @Tags Address
 // @Accept json
 // @Produce json
-// @Param address body payload.CreateAddressDTO true "Address"
+// @Param address body payload.AddressDTO true "Address"
 // @Success 200 {object} domain.Response
 // @Failure 500 {object} domain.Response
 // @Router /api/address [post]
 func (a *addressController) Create(ctx *fiber.Ctx) error {
-	var address payload.CreateAddressDTO
+	var address payload.AddressDTO
 	if err := a.validator.ValidateBody(ctx, &address); err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(domain.Response{
 			MESSAGE: constant.MESSAGE_INVALID_BODY,
@@ -69,17 +69,18 @@ func (a *addressController) Create(ctx *fiber.Ctx) error {
 	}
 
 	if err := a.addressUsecase.Create(&domain.Address{
-		USER_ID:        ctx.Locals(constant.USER_ID).(string),
-		FIRST_NAME:     address.FIRST_NAME,
-		LAST_NAME:      address.LAST_NAME,
-		COMPANY:        address.COMPANY,
-		STREET_ADDRESS: address.STREET_ADDRESS,
-		STATE:          address.STATE,
-		COUNTRY:        address.COUNTRY,
-		ZIP_CODE:       address.ZIP_CODE,
-		EMAIL:          address.EMAIL,
-		PHONE:          address.PHONE,
-		TYPE:           address.TYPE,
+		USER_ID:      ctx.Locals(constant.USER_ID).(string),
+		FIRST_NAME:   address.FIRST_NAME,
+		LAST_NAME:    address.LAST_NAME,
+		EMAIL:        address.EMAIL,
+		PHONE:        address.PHONE,
+		LABEL:        address.LABEL,
+		DEFAULT:      *address.DEFAULT,
+		ADDRESS:      address.ADDRESS,
+		SUB_DISTRICT: address.SUB_DISTRICT,
+		DISTRICT:     address.DISTRICT,
+		PROVINCE:     address.PROVINCE,
+		ZIP_CODE:     address.ZIP_CODE,
 	}); err != nil {
 		return ctx.Status(fiber.StatusInternalServerError).JSON(domain.Response{
 			MESSAGE: constant.MESSAGE_INTERNAL_SERVER_ERROR,
@@ -98,32 +99,49 @@ func (a *addressController) Create(ctx *fiber.Ctx) error {
 // @Tags Address
 // @Accept json
 // @Produce json
-// @Param address body payload.UpdateAddressDTO true "Address"
+// @Param id path int true "Address ID"
+// @Param address body payload.AddressDTO true "Address"
 // @Success 200 {object} domain.Response
 // @Failure 500 {object} domain.Response
-// @Router /api/address [put]
+// @Router /api/address/{id} [put]
 func (a *addressController) Update(ctx *fiber.Ctx) error {
-	var address payload.UpdateAddressDTO
-	if err := a.validator.ValidateBody(ctx, &address); err != nil {
+	var addressBody payload.AddressDTO
+	id, err := strconv.ParseUint(ctx.Params("id"), 10, 64)
+	if err != nil {
 		return ctx.Status(fiber.StatusBadRequest).JSON(domain.Response{
 			MESSAGE: constant.MESSAGE_BAD_REQUEST,
 			SUCCESS: false,
 		})
 	}
 
+	if err := a.validator.ValidateBody(ctx, &addressBody); err != nil {
+		return ctx.Status(fiber.StatusBadRequest).JSON(domain.Response{
+			MESSAGE: constant.MESSAGE_BAD_REQUEST,
+			SUCCESS: false,
+		})
+	}
+
+	if CanModify, err := a.addressUsecase.CheckPermissionCanModifyAddress(ctx.Locals(constant.USER_ID).(string), int(id)); err != nil || !CanModify {
+		return ctx.Status(fiber.StatusUnauthorized).JSON(domain.Response{
+			MESSAGE: constant.MESSAGE_UNAUTHORIZED,
+			SUCCESS: false,
+		})
+	}
+
 	if err := a.addressUsecase.Update(&domain.Address{
-		ID:             address.ID,
-		USER_ID:        ctx.Locals(constant.USER_ID).(string),
-		FIRST_NAME:     address.FIRST_NAME,
-		LAST_NAME:      address.LAST_NAME,
-		COMPANY:        address.COMPANY,
-		STREET_ADDRESS: address.STREET_ADDRESS,
-		STATE:          address.STATE,
-		COUNTRY:        address.COUNTRY,
-		ZIP_CODE:       address.ZIP_CODE,
-		EMAIL:          address.EMAIL,
-		PHONE:          address.PHONE,
-		TYPE:           address.TYPE,
+		ID:           int(id),
+		USER_ID:      ctx.Locals(constant.USER_ID).(string),
+		FIRST_NAME:   addressBody.FIRST_NAME,
+		LAST_NAME:    addressBody.LAST_NAME,
+		EMAIL:        addressBody.EMAIL,
+		PHONE:        addressBody.PHONE,
+		LABEL:        addressBody.LABEL,
+		DEFAULT:      *addressBody.DEFAULT,
+		ADDRESS:      addressBody.ADDRESS,
+		SUB_DISTRICT: addressBody.SUB_DISTRICT,
+		DISTRICT:     addressBody.DISTRICT,
+		PROVINCE:     addressBody.PROVINCE,
+		ZIP_CODE:     addressBody.ZIP_CODE,
 	}); err != nil {
 		return ctx.Status(fiber.StatusInternalServerError).JSON(domain.Response{
 			MESSAGE: constant.MESSAGE_INTERNAL_SERVER_ERROR,
